--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "homepage": "https://github.com/Copyes/Parcel#readme",
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@vue/component-compiler-utils": "^3.0.0",
     "less": "^3.0.4",
-    "parcel-plugin-vue": "^1.5.0"
+    "parcel-bundler": "^1.12.3",
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.3",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   }
 }
